Update Character endpoint sort method
